# c-suite

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  build.py  gendef.h  json_maker.py  main.c  vector.c  vector.h
benches/: allocators.c  bench_allocators.c
src/: arena.c  arena.h  arena_allocator.c  arena_allocator.h  fixed_allocator.c  fixed_allocator.h  fixed_buffer.c  fixed_buffer.h  fixed_buffer_allocator.c  fixed_buffer_allocator.h  hashmap.c  hashmap.h  ilist.c  ilist.h  linkedlist.c  linkedlist.h  llist.c  llist.h  main.c  nob.h  queue.c  queue.h  sstring.c  sstring.h  tracking_allocator.c  tracking_allocator.h  vec.c  vec.h  vector.c  vector.h  vstr.c  vstr.h
tests/: llist.c  test_arena.c  test_fixed_buffer.c  test_hashmap.c  test_ilist.c  test_llist.c  test_queue.c  test_vec.c  test_vstr.c  vstr.c
